--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
             <h3> I must be good for something.</h3>
           </div>
         </article>
+
+        <div class="nothing"></div>
        
      </div>
    </main>
